--- a/css/styles.css
+++ b/css/styles.css
@@ -11496,7 +11496,7 @@ position: absolute;
   font-family: Kanit;
   color: #be9cff;
   letter-spacing: 1px;
-  opacity: 0.5;
+  opacity: 1;
   text-decoration: none;
   border-bottom: 1px solid #be9cff;
   padding-bottom: 5px;
@@ -11504,6 +11504,7 @@ position: absolute;
 }
 .masthead-heading a:hover{
   opacity: 1;
+  color: #fff !important;
 }
 .masthead-heading a i{
   margin-right: 10px;
